--- a/views/order.ejs
+++ b/views/order.ejs
@@ -410,16 +410,16 @@
                         </form>
                     </div>
                 </section>
-                <section class="rside col-12 col-md-4">
+                <section class="rside col col-md-4">
                     <!-- summary -->
                     <div id="summery">
                         <h3 class="vg-h3 text-center my-3">訂單內容</h3>
                         <p class="vg-ps text-center">編號<span id="orderid"></span></p>
-                        <table id="summary_items" class="table ">
+                        <table id="summary_items" class="table">
                             <tr>
                                 <th>品項</th>
-                                <th>數量</th>
-                                <th>價格</th>
+                                <th>#</th>
+                                <th class="w-25">價格</th>
                             </tr>
                         </table>
                         <table id="summary_coupon" class="table w-50">
