--- a/views/rateorder.ejs
+++ b/views/rateorder.ejs
@@ -53,7 +53,7 @@
                 </div>
                 <!-- 特定產品評價 -->
                 <div class="message my-5">
-                    <p class="vg-p">歡迎您針對我們的產品分享留言<span class="vg-ps ms-3">最多3則</span>
+                    <p class="vg-p">邀請您分享留言<span class="vg-ps ms-3">最多3則</span>
                         <button id="moremsg" class="d-inline btn btn-vg-xs mb-1">＋</button>
                     </p>
                     <div id="inputContainer">
