--- a/views/orderconfirm.ejs
+++ b/views/orderconfirm.ejs
@@ -81,8 +81,8 @@
                         <table id="summary_items" class="table ">
                             <tr>
                                 <th>品項</th>
-                                <th>數量</th>
-                                <th>價格</th>
+                                <th>#</th>
+                                <th class="w-25">價格</th>
                             </tr>
                         </table>
                         <table id="summary_coupon" class="table w-50">
