--- a/views/home.ejs
+++ b/views/home.ejs
@@ -99,7 +99,7 @@
                                     $('#sec4 .pSlide-track').append(`
                                     <div class="pSlide" id="pSlide${i}">
                                         <div class="card text-center vgslide${i}" style="width: 18rem;">
-                                            <div class="card-header">
+                                            <div class="card-header vg-p fw-bold">
                                                 ${jsonObj[i].product}
                                             </div>
                                             <img class="card-img-top" src="img/${jsonObj[i].product}.png" alt="Card image cap">
@@ -129,7 +129,7 @@
                                 $('#sec5 .pSlide2-track').append(`
                                 <div class="pSlide2">
                                     <div class="card border-success text-left">
-                                        <div class="card-header">
+                                        <div class="card-header vg-p fw-bold">
                                             ${jsonObj[i].Name}
                                         </div>
                                         <div class="card-body">
