--- a/views/share/modal.ejs
+++ b/views/share/modal.ejs
@@ -3,7 +3,7 @@
 <button
   type="button"
   id="modalOnPage"
-  style="z-index: 20; background-color: var(--primary-2); color: #ccdcac"
+  style="z-index: 20; background-color: var(--sc-r-Dark); color: #fff"
   onclick="hideButton()"
   class="btn btn-vg-rnd"
   data-bs-toggle="modal"
@@ -25,7 +25,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="dxIntroLabel">診斷適合你的蔬果箱</h1>
+        <h1 class="modal-title vg-h4" id="dxIntroLabel">診斷適合你的蔬果箱</h1>
         <button
           type="button"
           class="btn-close"
@@ -34,7 +34,7 @@
           onclick="showModalOnPage()"
         ></button>
       </div>
-      <div class="modal-body">
+      <div class="modal-body vg-p">
         商品種類多，我們提供診斷小測驗協助您快速找到符合您需求的蔬菜箱/水果箱，請問是否進行診斷呢?
       </div>
       <div class="modal-footer d-flex justify-content-center">
@@ -70,7 +70,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="dxQTypeLabel">Q: 選購種類?</h1>
+        <h1 class="modal-title vg-h4" id="dxQTypeLabel">Q: 選購種類?</h1>
         <button
           type="button"
           class="btn-close"
@@ -79,7 +79,7 @@
           onclick="showModalOnPage()"
         ></button>
       </div>
-      <div class="modal-body">
+      <div class="modal-body vg-p">
         Vege提供純蔬菜箱、純水果箱以及綜合蔬果箱，請問今天想訂哪種呢?
         <br />
         <div class="d-flex justify-content-center mt-3">
@@ -134,7 +134,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="dxQGymLabel">Q: 是否有增肌需求?</h1>
+        <h1 class="modal-title vg-h4" id="dxQGymLabel">Q: 是否有增肌需求?</h1>
         <button
           type="button"
           class="btn-close"
@@ -143,7 +143,7 @@
           onclick="showModalOnPage()"
         ></button>
       </div>
-      <div class="modal-body">
+      <div class="modal-body vg-p">
         對有增肌需求的族群來說, 蛋白質是必須攝取的營養!
         請問是否有健身並有增肌的需求呢?
         <br />
@@ -191,7 +191,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="dxQDietLabel">Q: 是否有減脂需求?</h1>
+        <h1 class="modal-title vg-h4" id="dxQDietLabel">Q: 是否有減脂需求?</h1>
         <button
           type="button"
           class="btn-close"
@@ -200,7 +200,7 @@
           onclick="showModalOnPage()"
         ></button>
       </div>
-      <div class="modal-body">
+      <div class="modal-body vg-p">
         對有減脂需求的族群來說，每日攝取的熱量何其重要，Vege可為你把關高/低熱量的蔬果。請問是否有減脂需求呢?
         <br />
         <div class="d-flex justify-content-center mt-3">
@@ -247,7 +247,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="dxQGenderLabel">Q: 您的性別?</h1>
+        <h1 class="modal-title vg-h4" id="dxQGenderLabel">Q: 您的性別?</h1>
         <button
           type="button"
           class="btn-close"
@@ -256,7 +256,7 @@
           onclick="showModalOnPage()"
         ></button>
       </div>
-      <div class="modal-body">
+      <div class="modal-body vg-p">
         您知道依據性別、體質、目前身體狀況，適合的蔬菜水果大不相同嗎?
         選擇自己的性別有利診斷的正確性喔!
         <br />
@@ -304,7 +304,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="dxQMCLabel">Q: 是否逢生理期?</h1>
+        <h1 class="modal-title vg-h4" id="dxQMCLabel">Q: 是否逢生理期?</h1>
         <button
           type="button"
           class="btn-close"
@@ -313,7 +313,7 @@
           onclick="showModalOnPage()"
         ></button>
       </div>
-      <div class="modal-body">
+      <div class="modal-body vg-p">
         蔬菜水果都有分寒、涼、平、溫、熱五種屬性，逢生理期的美女由Vege為你把關不適合的蔬果降低身體的負擔!
         請問是否逢生理期?
         <br />
@@ -361,7 +361,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="dxQHotLabel">Q: 檢視您身體特性:</h1>
+        <h1 class="modal-title vg-h4" id="dxQHotLabel">Q: 檢視您身體特性:</h1>
         <button
           type="button"
           class="btn-close"
@@ -370,7 +370,7 @@
           onclick="showModalOnPage()"
         ></button>
       </div>
-      <div class="modal-body">
+      <div class="modal-body vg-p">
         人的體質有分寒性、熱性，適合吃不同的食物來養生，蔬菜也有分寒熱，吃對才能吃出健康！
         花點時間好好了解自己的身體特性，請問以下症狀是否8成符合? <br /><br />
         <ul>
@@ -429,7 +429,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="dxQColdLabel">Q: 檢視您身體特性:</h1>
+        <h1 class="modal-title vg-h4" id="dxQColdLabel">Q: 檢視您身體特性:</h1>
         <button
           type="button"
           class="btn-close"
@@ -438,7 +438,7 @@
           onclick="showModalOnPage()"
         ></button>
       </div>
-      <div class="modal-body">
+      <div class="modal-body vg-p">
         人的體質有分寒性、熱性，適合吃不同的食物來養生，蔬菜也有分寒熱，吃對才能吃出健康！
         花點時間好好了解自己的身體特性，請問以下症狀是否8成符合? <br /><br />
         <ul>
@@ -490,9 +490,9 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="dxINGLabel">診斷中...</h1>
+        <h1 class="modal-title vg-h4" id="dxINGLabel">診斷中...</h1>
       </div>
-      <div class="modal-body">
+      <div class="modal-body vg-p">
         根據您的填寫診斷並篩選適合的蔬果箱，請稍候<br /><br />
         <div
           class="ld ld-spinner ld-cycle"
@@ -520,7 +520,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="dxResultLabel">診斷完成</h1>
+        <h1 class="modal-title vg-h4" id="dxResultLabel">診斷完成</h1>
         <button
           type="button"
           class="btn-close"
@@ -529,7 +529,7 @@
           onclick="showModalOnPage()"
         ></button>
       </div>
-      <div class="modal-body">
+      <div class="modal-body vg-p">
         感謝您的耐心等候，我們已根據您的體質與需求選品6樣適合您攝取的蔬果，現在前往商品頁為您自動選取箱對應蔬果的客製化蔬果箱。
         <br />
       </div>
@@ -669,6 +669,7 @@
     }, 4000);
   }
   $(".go_shop").on("click", function () {
+    showModalOnPage();
     openCity(event, "fu_tab7");
     $("#dxING").modal("hide");
     $(".modal").hide();
