--- a/lib/css/vg.css
+++ b/lib/css/vg.css
@@ -51,7 +51,7 @@
   }
   
   .vg-h4, h4 {
-    font-size: calc(1.5 * 1.25);
+    font-size: calc(1.5rem * 1.25);
     font-weight: bold;
   }
   
@@ -209,11 +209,12 @@
     min-width: 100px;
     font-size: calc(0.9rem * 1.25);;
     color: var(--text-color);
-    transition: all 0.5s;
+    /* transition: all 0.5s; */
   }
   
   .btn-vg-reg:hover {
     color: var(--text-color);
+    font-weight: 600;
     background-color: var(--primary-1);
   }
   /* ↑↑↑↑↑ btn-vg-reg ↑↑↑↑↑ */
@@ -621,6 +622,10 @@
     text-align: center;
     cursor: pointer;
     z-index: 2;
+  }
+
+  .icon{
+    top: 5px;
   }
   
   .icon.login {
@@ -1593,20 +1598,20 @@
 /* ↓↓↓↓↓ btn-vg-rnd ↓↓↓↓↓ */
 .btn-vg-rnd {
     /* letter-spacing: 2px; */
-    border: 2px solid var(--primary);
+    border: 2px solid white;
     border-radius: 50%;
-    bottom: 100px;
+    bottom: 10px;
     color: var(--text-color);
     cursor: pointer;
     display: none;
-    font-size: calc(0.75rem * 1.25);;
+    font-size: calc(1rem * 1.25);;
     margin: 0 10px;
     overflow: hidden;
     padding: 5px 10px;
     position: fixed;
     right: 5px;
-    height: 50px;
-    width: 50px;
+    height: 80px;
+    width: 80px;
     text-align: center;
 }
 
@@ -1615,7 +1620,7 @@
     position: absolute;
     height: 100%;
     width: 0;
-    background: green;
+    /* background: green; */
     color: white;
     left: 0;
     bottom: 0;
