--- a/views/product.ejs
+++ b/views/product.ejs
@@ -41,16 +41,16 @@
                 </div>
                 <div class="vg-h3-div2 fu_Mnav">
                   <div class="box">
-                    <button class="btn fu_nav">菜單特色</button>
+                    <button class="btn fu_nav vg-p">菜單特色</button>
                   </div>
                   <div class="box">
-                    <button class="btn fu_nav">週週訂閱</button>
+                    <button class="btn fu_nav vg-p">週週訂閱</button>
                   </div>
                   <div class="box">
-                    <button class="btn fu_nav">購買須知</button>
+                    <button class="btn fu_nav vg-p">購買須知</button>
                   </div>
                   <div class="box">
-                    <button class="btn fu_nav">最新活動</button>
+                    <button class="btn fu_nav vg-p">最新活動</button>
                   </div>
                 </div>
               </div>
@@ -81,23 +81,23 @@
                 <% if(data.con[t].product === data.con[6].product) { %>
                 <div class="middle_Con">
                   <h5 class="vg-h5">菜單特色:</h5>
-                  <p><%= data.con[t].feature %></p>
+                  <p class="vg-p"><%= data.con[t].feature %></p>
                   <h5 class="vg-h5">蔬果內容:</h5>
                   <div class="div_2">
-                    <p class="p-0 m-0">每箱 <%= data.con[t].content %></p>
+                    <p class="vg-p p-0 m-0">每箱 <%= data.con[t].content %></p>
                   </div>
-                  <p>
+                  <p class="vg-p">
                     (內容以當季蔬菜組裝出貨) <br />運費根據黑貓低溫配送基本價
                     <br />
                     宅配/超商取貨為同樣價格
                   </p>
                   <h5 class="vg-h5">商品價格:</h5>
-                  <p>
+                  <p class="vg-p">
                     最低金額:<span class="price1">
                       <%= data.con[t].price %></span
                     >元
                   </p>
-                  <p>
+                  <p class="vg-p">
                     最高金額:
                     <span class="price3"
                       ><%= parseInt(data.con[t].price)+200 %></span
@@ -107,7 +107,7 @@
                   <div class="fv_all">
                     <div class="fv_con">
                       <label for="commodity" class="vg-p">選擇商品:</label>
-                      <select class="commodity">
+                      <select class="commodity" class="vg-p">
                         <option></option>
                         <option value="once" data-size="s">
                           雙人箱(1~2人)
@@ -117,7 +117,7 @@
                         </option>
                       </select>
                       <br />
-                      <p class="p-0 m-0">
+                      <p class="p-0 m-0 vg-p">
                         總金額: <span class="toal price4">0</span>元
                       </p>
                       <div class="fv_box vg-bd-5">
@@ -135,19 +135,19 @@
                           <div class="cons">
                             <h5 class="vg-h5"><strong>蔬菜</strong></h5>
                             <% for(let f = 0 ;f < data.veg.length ;f++ ){ %>
-                            <button class="btn f_1 f_2" data-pay="100">
+                            <button class="btn f_1 f_2 vg-p" data-pay="100">
                               <%= data.veg[f].product %>
                             </button>
                             <% } %>
                             <h5 class="vg-h5 hoh5"><strong>水果</strong></h5>
                             <% for(let f = 0 ;f < data.fruit.length ;f++ ){ %>
-                            <button class="btn f_1 f_2" data-pay="50">
+                            <button class="btn f_1 f_2 vg-p" data-pay="50">
                               <%= data.fruit[f].product %>
                             </button>
                             <% } %>
                           </div>
                           <div
-                            class="mo_foot d-flex justify-content-end align-items-center"
+                            class="mo_foot vg-p d-flex justify-content-end align-items-center"
                           >
                             <span>圖標:</span>
                             <span
@@ -171,7 +171,7 @@
                           </div>
                         </div>
                       </div>
-                      <span class="d-inline">數量:</span>
+                      <span class="d-inline vg-p">數量:</span>
                       <span
                         class="fa-solid fa-plus btn price1"
                         style="font-size: 10px"
@@ -183,8 +183,8 @@
                       ></span
                       ><br />
 
-                      <p class="d-inline">內容:</p>
-                      <strong class="buyfv buyfv2"></strong>
+                      <p class="d-inline vg-p">內容:</p>
+                      <strong class="buyfv buyfv2 vg-p"></strong>
                     </div>
                     <button class="btn btn-vg chage ms-1 mt-3">選擇蔬果</button>
                     <button
@@ -197,12 +197,12 @@
                 </div>
                 <div class="middle_Con">
                   <h5 class="vg-h5">運送頻率:</h5>
-                  <p>
+                  <p class="vg-p">
                     每周一次 ➞ 一期四箱 ➞
                     <br />
                     訂購期 30 天 (需於45天內配送完畢&含延後2次)
                   </p>
-                  <p>
+                  <p class="vg-p">
                     雙周一次 ➞ 一期四箱 ➞
                     <br />
                     訂購期 60 天 (需於90天內配送完畢 &含延後2次)
@@ -214,10 +214,12 @@
                     </span>
                   </h5>
 
-                  <p>30day一期運費160元 <br />60day 一期運費290元</p>
+                  <p class="vg-p">
+                    30day一期運費160元 <br />60day 一期運費290元
+                  </p>
 
                   <h5 class="vg-h5">價格:</h5>
-                  <p>
+                  <p class="vg-p">
                     <span>
                       單箱最低金額:<span class="price1">
                         <%= data.con[t].price %></span
@@ -232,7 +234,7 @@
                   </p>
                   <h5 class="vg-h5">選擇商品規格:</h5>
                   <label for="commodity" class="vg-h5">商品規格</label>
-                  <select class="commodity">
+                  <select class="commodity vg-p">
                     <option value="30d" data-size="s">雙人箱(30day)</option>
                     <option value="60d" data-size="l">雙人箱(60day)</option>
                     <option value="30d" data-size="s">家庭箱(30day)</option>
@@ -240,8 +242,10 @@
                   </select>
                   <br />
 
-                  <p>單箱價格: <span class="toal">0</span>元</p>
-                  <p>總金額: <span class="toal2 price4">0</span>元</p>
+                  <p class="vg-p">單箱價格: <span class="toal">0</span>元</p>
+                  <p class="vg-p">
+                    總金額: <span class="toal2 price4">0</span>元
+                  </p>
                   <div class="fv_box vg-bd-5">
                     <div class="vg-bd-5 mo_con">
                       <div
@@ -249,25 +253,25 @@
                       >
                         <h4 class="vg-h4 mb-0">請選擇您喜歡的蔬果</h4>
 
-                        <strong class="over"></strong>
+                        <strong class="over vg-p"></strong>
                         <button type="button" class="btn-close bcl"></button>
                       </div>
                       <div class="cons">
                         <h5 class="vg-h5"><strong>蔬菜</strong></h5>
                         <% for(let f = 0 ;f < data.veg.length ;f++ ){ %>
-                        <button class="btn f_1" data-pay="100">
+                        <button class="btn f_1 vg-p" data-pay="100">
                           <%= data.veg[f].product %>
                         </button>
                         <% } %>
                         <h5 class="vg-h5 hoh5"><strong>水果</strong></h5>
                         <% for(let f = 0 ;f < data.fruit.length ;f++ ){ %>
-                        <button class="btn f_1" data-pay="50">
+                        <button class="btn f_1 vg-p" data-pay="50">
                           <%= data.fruit[f].product %>
                         </button>
                         <% } %>
                       </div>
                       <div
-                        class="mo-foot d-flex justify-content-end align-items-center"
+                        class="mo-foot d-flex justify-content-end align-items-center vg-p"
                       >
                         <span>圖標:</span>
                         <span><img src="/img/天平.png" class="bas" />平性</span>
@@ -289,7 +293,7 @@
                       </div>
                     </div>
                   </div>
-                  <p class="d-inline">數量:</p>
+                  <p class="d-inline vg-p">數量:</p>
                   <span
                     class="fa-solid fa-plus btn price1"
                     style="font-size: 10px"
@@ -300,7 +304,7 @@
                     style="font-size: 10px"
                   ></span
                   ><br />
-                  <div class="fv_con">
+                  <div class="fv_con vg-p">
                     <p class="d-inline">內容:</p>
                     <br />
                     <strong class="buyfv"></strong>
@@ -311,9 +315,9 @@
                 <% } else { %>
                 <div class="middle_Con">
                   <h5 class="vg-h5">菜單特色:</h5>
-                  <p><%= data.con[t].feature %></p>
+                  <p class="vg-p"><%= data.con[t].feature %></p>
                   <h5 class="vg-h5">蔬果內容:</h5>
-                  <div class="div_2">
+                  <div class="div_2 vg-p">
                     <p class="m-0">
                       <span class="sp1">雙人箱</span>
                       <span class="concon"><%= data.con[t].content %></span>
@@ -333,26 +337,26 @@
                       <span class="sp2">適合3~4人</span>
                     </p>
                   </div>
-                  <span>(內容以當季蔬菜組裝出貨)</span>
-                  <p>
+                  <span class="vg-p">(內容以當季蔬菜組裝出貨)</span>
+                  <p class="vg-p">
                     運費根據黑貓低溫配送基本價 <br />
                     宅配/超商取貨為同樣價格
                   </p>
                   <h5 class="vg-h5">商品價格:</h5>
 
-                  <p>
+                  <p class="vg-p">
                     <span>雙人箱(1~2人)</span
                     ><span class="price1"> <%= data.con[t].price %></span>元
                   </p>
-                  <p>
+                  <p class="vg-p">
                     <span>家庭箱(3~4人)</span>
                     <span class="price3"
                       ><%= parseInt(data.con[t].price)+200 %></span
                     >元
                   </p>
                   <h5 class="vg-h5">選擇商品規格:</h5>
-                  <label for="commodity" class="mt-2">選擇商品:</label>
-                  <select class="commodity">
+                  <label for="commodity" class="mt-2 vg-p">選擇商品:</label>
+                  <select class="commodity vg-p">
                     <option></option>
                     <option value="once" data-size="s">雙人箱(1~2人)</option>
                     <option value="once" data-size="l">家庭箱(3~4人)</option>
@@ -372,12 +376,12 @@
                 </div>
                 <div class="middle_Con">
                   <h5 class="vg-h5">運送頻率:</h5>
-                  <p>
+                  <p class="vg-p">
                     每周一次 ➞ 一期四箱 ➞
                     <br />
                     訂購期 30 天 (需於45天內配送完畢&含延後2次)
                   </p>
-                  <p>
+                  <p class="vg-p">
                     雙周一次 ➞ 一期四箱 ➞
                     <br />
                     訂購期 60 天 (需於90天內配送完畢 &含延後2次)
@@ -388,24 +392,28 @@
                       訂閱一期享有運費優惠！
                     </span>
                   </h5>
-                  <p>雙人箱(1~2人) <span class="sp2">一期運費160元</span></p>
-                  <p>家庭箱(3~4人) <span class="sp2">一期運費290元</span></p>
+                  <p class="vg-p">
+                    雙人箱(1~2人) <span class="sp2">一期運費160元</span>
+                  </p>
+                  <p class="vg-p">
+                    家庭箱(3~4人) <span class="sp2">一期運費290元</span>
+                  </p>
                   <h5 class="vg-h5">價格:</h5>
-                  <p>
+                  <p class="vg-p">
                     雙人箱(1~2人):
                     <span class="price1"
                       ><%= parseInt(data.con[0].price)* 4 %></span
                     >元
                   </p>
-                  <p>
+                  <p class="vg-p">
                     家庭箱(3~4人):
                     <span class="price3">
                       <%= (parseInt(data.con[t].price) + 200) * 4 %></span
                     >元
                   </p>
                   <h5 class="vg-h5">選擇商品規格:</h5>
-                  <label for="commodity">選擇商品:</label>
-                  <select class="commodity">
+                  <label for="commodity vg-p">選擇商品:</label>
+                  <select class="commodity vg-p">
                     <option></option>
                     <option value="30d" data-size="s">雙人箱(30day)</option>
                     <option value="60d" data-size="l">雙人箱(60day)</option>
@@ -434,7 +442,7 @@
                       >每周一固定配送 (假日無物流)</span
                     >
                   </h5>
-                  <ol>
+                  <ol class="vg-p">
                     <li>選購產品</li>
                     <li>選擇規格(份量/運送方式/頻率)</li>
                     <li>下訂(客製需求/訂單備註/訂單資料)</li>
@@ -449,7 +457,7 @@
                     >
                   </h5>
 
-                  <ul>
+                  <ul class="vg-p">
                     <li>吃不完：訂購的蔬果多於您能在食用期限內消耗的量。</li>
                     <li>
                       臨時出國： 訂購後突然需要出國，無法在期限內食用所有蔬果。
@@ -460,7 +468,7 @@
                     </li>
                   </ul>
                   <h5 class="vg-h5">客戶回報系統:</h5>
-                  <ul>
+                  <ul class="vg-p">
                     <li>品項不好、有蟲、蔬果腐爛</li>
                     <li>拍照上傳客服</li>
                     <li>
@@ -474,13 +482,13 @@
                     </li>
                   </ul>
 
-                  <p>蔬菜內容以當季蔬菜組裝出貨！</p>
+                  <p class="vg-p">蔬菜內容以當季蔬菜組裝出貨！</p>
                 </div>
                 <div class="middle_Con">
                   <h5 class="vg-h5">最新活動</h5>
-                  <p><%= data.con[t].off_act %></p>
+                  <p class="vg-p"><%= data.con[t].off_act %></p>
                   <h5 class="vg-h5">活動內容</h5>
-                  <ul>
+                  <ul class="vg-p">
                     <li><%= data.con[t].act_content %></li>
                     <li><%= data.con[t].act_content2 %></li>
                     <li><%= data.con[t].act_content3 %></li>
@@ -495,7 +503,7 @@
                       >點我看詳細活動</a
                     >
                   </h6>
-                  <p><%= data.con[t].act_time %></p>
+                  <p class="vg-p"><%= data.con[t].act_time %></p>
                 </div>
               </div>
             </section>
